--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 *.html
 *.pdf
 NAP_paper.tex
+appendix.tex
+CogNAP_paper.tex
+
+# Temporary alternative files
+NAP_paper_4LabPhon.Rmd
+NAP_paper_4LabPhon.tex
 
 # log file
 *.log
