--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
 # Binary files
 *.png
 *.jpg
-*.mellel
 
 # Preview files
 *.html
 *.pdf
-NAP_paper.tex
 appendix*.tex
 CogNAP_paper.tex
 
 # Temporary alternative files
-NAP_paper.Rmd
-NAP_paper_4LabPhon.Rmd
-NAP_paper_4LabPhon.tex
-appendix_c*
+nonshared/
 
 # log file
 *.log
